# IProc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
IProc/: PictureProcessor.cpp  PictureProcessor.hpp  libiproc.h  tiffconf.h  tiffvers.h
IProc/BMPProcessor/: BMPProcessor.cpp  BMPProcessor.hpp
IProc/IProc/: IProc.cpp  IProc.hpp
IProc/JPEGProcessor/: JPEGProcessor.cpp  JPEGProcessor.hpp
IProc/PNGProcessor/: PNGProcessor.cpp  PNGProcessor.hpp  writepng.h
IProc/PixelProcessor/: PixelProcessor.cpp  PixelProcessor.h  PixelProcessor.hpp  pixel.h
IProc/SVGProcessor/: SVGProcessor.cpp  SVGProcessor.hpp
IProc/TIFFProcessor/: TIFFProcessor.cpp  TIFFProcessor.hpp
cmake/: build_module.cmake
cmake/modules_build/: libjpeg.cmake  libm.cmake  libpng.cmake  libtiff.cmake  nanosvg.cmake  zlib.cmake
doc/html/: graph_legend.html  index.html  navtreedata.js
lib/jpeg-6b/: jconfig.h  jmemsys.h
